--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "a04823e6-7e5d-401e-ace1-c9c0b0d9d596"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
